--- a/SpringAngulorRestHibernate/pom.xml
+++ b/SpringAngulorRestHibernate/pom.xml
@@ -21,6 +21,14 @@
 			<version>4.3.13.RELEASE</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
